@@ -174,6 +174,7 @@ static const char	*gl_extensions;
 qboolean	is_3dfx = false;
 
 GLint		gl_max_size = 256;
+GLfloat		gl_max_anisotropy;
 float		gldepthmin, gldepthmax;
 
 // palettized textures
@@ -282,8 +283,7 @@ static void VID_ConWidth (int modenum)
 	vid.height = vid.conheight = h;
 	if (w != modelist[modenum].width)
 		vid_conscale = true;
-	else
-		vid_conscale = false;
+	else	vid_conscale = false;
 }
 
 void VID_ChangeConsize (int dir)
@@ -319,8 +319,7 @@ void VID_ChangeConsize (int dir)
 	vid.recalc_refdef = 1;
 	if (vid.conwidth != modelist[vid_modenum].width)
 		vid_conscale = true;
-	else
-		vid_conscale = false;
+	else	vid_conscale = false;
 }
 
 float VID_ReportConsize(void)
@@ -651,14 +650,49 @@ static void CheckMultiTextureExtensions (void)
 
 		Con_SafePrintf("Found %i TMUs support\n", num_tmus);
 		gl_mtexable = true;
-
-		// start up with the correct texture selected!
 		glDisable_fp(GL_TEXTURE_2D);
 		glActiveTextureARB_fp(GL_TEXTURE0_ARB);
 	}
 	else
 	{
 		Con_SafePrintf("GL_ARB_multitexture not found\n");
+	}
+}
+
+static void CheckAnisotropyExtensions (void)
+{
+	gl_max_anisotropy = 1;
+
+	Con_SafePrintf("Anisotropic filtering ");
+	if (strstr(gl_extensions, "GL_EXT_texture_filter_anisotropic"))
+	{
+		GLfloat test1, test2;
+		GLuint tex;
+
+		// test to make sure we really have control over it
+		// 1.0 and 2.0 should always be legal values.
+		glGenTextures_fp(1, &tex);
+		glBindTexture_fp(GL_TEXTURE_2D, tex);
+		glTexParameterf_fp(GL_TEXTURE_2D, GL_TEXTURE_MAX_ANISOTROPY_EXT, 1.0f);
+		glGetTexParameterfv_fp(GL_TEXTURE_2D, GL_TEXTURE_MAX_ANISOTROPY_EXT, &test1);
+		glTexParameterf_fp(GL_TEXTURE_2D, GL_TEXTURE_MAX_ANISOTROPY_EXT, 2.0f);
+		glGetTexParameterfv_fp(GL_TEXTURE_2D, GL_TEXTURE_MAX_ANISOTROPY_EXT, &test2);
+		glDeleteTextures_fp(1, &tex);
+		if (test1 != 1 || test2 != 2)
+		{
+			Con_SafePrintf("driver-locked @ %.1f\n", test1);
+		}
+		else
+		{
+			glGetFloatv_fp(GL_MAX_TEXTURE_MAX_ANISOTROPY_EXT, &gl_max_anisotropy);
+			if (gl_max_anisotropy < 2)
+				Con_SafePrintf("broken\n");
+			else	Con_SafePrintf("found, max %.1f\n", gl_max_anisotropy);
+		}
+	}
+	else
+	{
+		Con_SafePrintf("not found\n");
 	}
 }
 
@@ -735,7 +769,7 @@ static void GL_Init_Functions (void)
 static void GL_ResetFunctions (void)
 {
 #ifdef	GL_DLSYM
-#define GL_FUNCTION(ret, func, params) \
+#define GL_FUNCTION(ret, func, params)	\
 	func##_fp = NULL;
 #define GL_FUNCTION_OPT(ret, func, params)
 #include "gl_func.h"
@@ -815,6 +849,7 @@ static void GL_Init (void)
 	VID_InitGamma ();
 
 	CheckMultiTextureExtensions();
+	CheckAnisotropyExtensions();
 	CheckStencilBuffer();
 
 	glClearColor_fp (1,0,0,0);
@@ -889,6 +924,7 @@ void GL_EndRendering (void)
 			enable_mouse = _enable_mouse.integer;
 		}
 	}
+
 	if (fullsbardraw)
 		Sbar_Changed();
 }
@@ -1010,9 +1046,9 @@ void VID_SetPalette (unsigned char *palette)
 			v = (ColorPercent[15 - p] << SHIFT_a) + (r << SHIFT_r) + (g << SHIFT_g) + (b << SHIFT_b);
 			*table++ = v;
 
-			RTint[i*16+p] = ((float)r) / ((float)ColorPercent[15-p]);
-			GTint[i*16+p] = ((float)g) / ((float)ColorPercent[15-p]);
-			BTint[i*16+p] = ((float)b) / ((float)ColorPercent[15-p]);
+			RTint[i*16 + p] = ((float)r) / ((float)ColorPercent[15-p]);
+			GTint[i*16 + p] = ((float)g) / ((float)ColorPercent[15-p]);
+			BTint[i*16 + p] = ((float)b) / ((float)ColorPercent[15-p]);
 		}
 	}
 
