@@ -59,5 +59,10 @@
 #define GL_COLOR_INDEX8_EXT			0x80E5
 #endif
 
+#ifndef	GL_MAX_TEXTURE_MAX_ANISOTROPY_EXT
+#define	GL_TEXTURE_MAX_ANISOTROPY_EXT		0x84FE
+#define	GL_MAX_TEXTURE_MAX_ANISOTROPY_EXT	0x84FF
+#endif
+
 #endif	/* __GLHEADER_H */
 
