@@ -4,6 +4,13 @@ Development Progress	:
 ---------------------------
 
 2012-02-14 (SVN):
+    * glheader.h,glquake.h,gl_func.h,gl_vidnt.c,gl_vidsdl.c,gl_draw.c:
+      Added support for anisotropic texture filtering, controlled by the
+      new gl_texture_anisotropy cvar: valid values between 1 to whatever
+      the driver returns as maximum. The callback to the new cvar sets
+      all the mipmap texture filters whenever the cvar's value changes.
+
+2012-02-14 (SVN):
     * gl_warp.c: set lowsky and upsky texture filters as GL_LINEAR
 
 2012-02-14 (SVN):
